Did .gitignore things

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/Not-Important/
+/NOT-Important/
 /SEMI-Important/*.py
 /Important/*.vs
-/Important/Impotant.vcxproj.filters
+/Important/Important.vcxproj.filters
 /Important/Important.vcxproj.user
