--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 NOT-Important/
 SEMI-Important/*.py
-Important/.vs
+Important/*.vs
 Important/Important.vcxproj.filters
 Important/Important.vcxproj.user
